--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <tr>
         <td>
           <img
-            src="E:\Development\Web\Udemy Web\Personal Website\me.jpg"
+            src="https://github.com/omkumar001/Demo-CV/blob/main/me.jpg"
             alt="My profile Picture"
             height="140px"
             width="140px"
