--- a/form.html
+++ b/form.html
@@ -17,7 +17,7 @@
     <hr />
     <br />
 
-    <form action="index.html" method="POST">
+    <form action="index.html" method="GET">
       <label>Name :</label>
       <input type="text" />
       <input type="color" name="" id="" /><br />
