Updated the path of  the image used

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <tr>
         <td>
           <img
-            src="https://github.com/omkumar001/Demo-CV/blob/main/me.jpg"
+            src="me.jpg"
             alt="My profile Picture"
             height="140px"
             width="140px"
