--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Portfolio</title>
   </head>
 
-  <body style="background-color: lightgreen">
+  <body style="background-color: #ccf2f4">
     <table cellspacing="20">
       <tr>
         <td>
