--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
     <title>About Me</title>
   </head>
 
-  <body style="background-color: plum">
+  <body style="background-color: #d3e0dc">
     <h1>My Contact Details :-</h1>
 
     <p>9829754538</p>
